--- a/MyPeronalWebSite/Views/Home/Index.cshtml
+++ b/MyPeronalWebSite/Views/Home/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿
 @model MyPeronalWebSite.Models.ViewModel.IndexViewModel
+@using MyPeronalWebSite.Helper
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -49,10 +50,10 @@
                     <div class="single-contact">
                         <i class="fa-solid fa-envelope"></i>
                         <div class="information tmp-link-animation">
-                            
+
                             <a href="mailto:@Model.Tbl_AboutMe.EmailAdress">@Model.Tbl_AboutMe.EmailAdress</a>
                         </div>
-    
+
                     </div>
                     <!-- single contact information end -->
                     <!-- single contact information -->
@@ -180,10 +181,10 @@
                         <div class="find-me-on mt--40 tmp-scroll-trigger tmp-fade-in animation-order-2">
                             <h2 class="find-me-on-title">Find me on</h2>
                             <div class="social-link banner">
-                               
+
                                 <a href="@Model.Tbl_AboutMe.LinkedlnURL"><i class="fa-brands fa-linkedin-in"></i></a>
                                 <a href="@Model.Tbl_AboutMe.GithubURL"><i class="fa-brands fa-github"></i></a>
-                              
+
                             </div>
                         </div>
                     </div>
@@ -205,106 +206,27 @@
 <section class="service-area tmp-section-gap">
     <div class="container">
         <div class="row justify-content-center">
-            <div class="col-lg-3 col-md-4 col-sm-6">
-                <div class="service-card-v1 tmp-scroll-trigger tmp-fade-in animation-order-1 tmp-link-animation">
-                    <div class="service-card-icon">
-                        <i class="fa-light fa-pen-ruler"></i>
+            @foreach (var item in Model.Tbl_Skills)
+            {
+                <div class="col-lg-3 col-md-4 col-sm-6">
+                    <div class="service-card-v1 tmp-scroll-trigger tmp-fade-in animation-order-1 tmp-link-animation">
+
+                        <div class="service-card-icon">
+
+                            <i class="@item.Icon"></i>
+                        </div>
+                        <h4 class="service-title"><a href="service-details.html">@item.WhichSkills</a></h4>
+
                     </div>
-                    <h4 class="service-title"><a href="service-details.html">Web Design</a></h4>
-                    <p class="service-para">120 Projects</p>
                 </div>
-            </div>
-            <div class="col-lg-3 col-md-4 col-sm-6">
-                <div class="service-card-v1 tmp-scroll-trigger tmp-fade-in animation-order-2 tmp-link-animation">
-                    <div class="service-card-icon">
-                        <i class="fa-light fa-bezier-curve"></i>
-                    </div>
-                    <h4 class="service-title"><a href="service-details.html">Ui/Ux Design</a></h4>
-                    <p class="service-para">241 Projects</p>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-4 col-sm-6">
-                <div class="service-card-v1 tmp-scroll-trigger tmp-fade-in animation-order-3 tmp-link-animation">
-                    <div class="service-card-icon">
-                        <i class="fa-light fa-lightbulb"></i>
-                    </div>
-                    <h4 class="service-title"><a href="service-details.html">Web Research</a></h4>
-                    <p class="service-para">240 Projects</p>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-4 col-sm-6">
-                <div class="service-card-v1 tmp-scroll-trigger tmp-fade-in animation-order-4 tmp-link-animation">
-                    <div class="service-card-icon">
-                        <i class="fa-light fa-envelope"></i>
-                    </div>
-                    <h4 class="service-title"><a href="service-details.html">Marketing</a></h4>
-                    <p class="service-para">331 Prodect</p>
-                </div>
-            </div>
+            }
         </div>
+
     </div>
+
 </section>
 <!-- Tpm Service Area End -->
 <!-- Tpm Counter Area Start -->
-<section class="counter-area">
-    <div class="container">
-        <div class="row g-5">
-            <div class="col-12 col-lg-6 col-xl-6 col-xxl-6">
-                <div class="year-of-expariance-wrapper bg-blur-style-one tmp-scroll-trigger tmp-fade-in animation-order-1">
-                    <div class="year-expariance-wrap">
-                        <!-- <h2 class="year-number"><span class="counter">25 </span> </h2> -->
-                        <h2 class="counter year-number">
-                            <span class="odometer" data-count="25">00</span>
-                        </h2>
-                        <h3 class="year-title">Years Of <br> experience</h3>
-                    </div>
-                    <p class="year-para">
-                        Business consulting consultants provide expert advice and guida the a
-                        businesses to help theme their performance efficiency
-                    </p>
-                </div>
-            </div>
-            <div class="col-12 col-lg-6 col-xl-6 col-xxl-6">
-                <div class="counter-area-right-content">
-                    <div class="row g-5">
-                        <div class="col-lg-6 col-sm-6 col-12">
-                            <div class="counter-card tmponhover tmp-scroll-trigger tmp-fade-in animation-order-1">
-                                <h3 class="counter counter-title">
-                                    <span class="odometer" data-count="20">00</span>k+
-                                </h3>
-                                <p class="counter-para">Our Project Complete</p>
-                            </div>
-                        </div>
-                        <div class="col-lg-6 col-sm-6 col-12">
-                            <div class="counter-card tmponhover tmp-scroll-trigger tmp-fade-in animation-order-2">
-                                <h3 class="counter counter-title">
-                                    <span class="odometer" data-count="10">00</span>k+
-                                </h3>
-                                <p class="counter-para">Our Natural Products</p>
-                            </div>
-                        </div>
-                        <div class="col-lg-6 col-sm-6 col-12">
-                            <div class="counter-card tmponhover tmp-scroll-trigger tmp-fade-in animation-order-3">
-                                <h3 class="counter counter-title">
-                                    <span class="odometer" data-count="200">00</span>+
-                                </h3>
-                                <p class="counter-para">Clients Reviews</p>
-                            </div>
-                        </div>
-                        <div class="col-lg-6 col-sm-6 col-12">
-                            <div class="counter-card tmponhover tmp-scroll-trigger tmp-fade-in animation-order-4">
-                                <h3 class="counter counter-title">
-                                    <span class="odometer" data-count="1000">00</span>+
-                                </h3>
-                                <p class="counter-para">our Satisfied Clientd</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
 <!-- Tpm Counter Area End -->
 <!-- Tpm Latest Service Area Start -->
 <section class="latest-service-area tmp-section-gapTop">
@@ -363,7 +285,7 @@
             </div>
             <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6">
                 <div class="support-company-logo tmp-scroll-trigger tmp-fade-in animation-order-2">
-                    <img src="/Content/images/our-supported-company/company-logo-2.svg" alt="Reeni - Personal Portfolio HTML Template">
+                    C#
                 </div>
             </div>
             <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6">
@@ -469,76 +391,53 @@
             <div class="section-sub-title center-title tmp-scroll-trigger tmp-fade-in animation-order-1">
                 <span class="subtitle">Blog and news</span>
             </div>
-            <h2 class="title split-collab tmp-scroll-trigger tmp-fade-in animation-order-2">Elevating Personal Branding the <br> through Powerful Portfolios</h2>
+            <h2 class="title split-collab tmp-scroll-trigger tmp-fade-in animation-order-2">Current Project</h2>
         </div>
         <div class="row">
-            <div class="col-lg-4 col-md-6 col-sm-6">
-                <div class="blog-card tmp-hover-link tmp-scroll-trigger tmp-fade-in animation-order-1">
-                    <div class="img-box">
-                        <a href="blog-details.html">
-                            <img class="img-primary hidden-on-mobile" src="/Content/images/blog/blog-img-4.jpg" alt="Blog Thumbnail">
-                            <img class="img-secondary" src="/Content/images/blog/blog-img-4.jpg" alt="BLog Thumbnail">
-                        </a>
-                        <ul class="blog-tags">
-                            <li><span class="tag-icon"><i class="fa-regular fa-user"></i></span>Mesbah</li>
-                            <li><span class="tag-icon"><i class="fa-solid fa-calendar-days"></i></span>April 10</li>
-                        </ul>
-                    </div>
-                    <div class="blog-content-wrap">
-                        <h3 class="blog-title v2"><a class="link" href="blog-details.html">Let’s bring your ideas to life! Contact me, and let’s</a></h3>
-                        <a href="blog-details.html" class="read-more-btn v2">
-                            Read More <span class="read-more-icon"><i class="fa-solid fa-angle-right"></i></span>
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-6">
-                <div class="blog-card tmp-hover-link tmp-scroll-trigger tmp-fade-in animation-order-2">
-                    <div class="img-box">
-                        <a href="blog-details.html">
-                            <img class="img-primary hidden-on-mobile" src="/Content/images/blog/blog-img-5.jpg" alt="Blog Thumbnail">
-                            <img class="img-secondary" src="/Content/images/blog/blog-img-5.jpg" alt="BLog Thumbnail">
-                        </a>
-                        <ul class="blog-tags">
-                            <li><span class="tag-icon"><i class="fa-regular fa-user"></i></span>Mesbah</li>
-                            <li><span class="tag-icon"><i class="fa-solid fa-calendar-days"></i></span>April 10</li>
-                        </ul>
-                    </div>
-                    <div class="blog-content-wrap">
-                        <h3 class="blog-title v2">
-                            <a class="link" href="blog-details.html">
-                                Inspiring the World, One Project at a
-                                Time for the
-                                man
+            @foreach (var item in Model.Tbl_Projects)
+            {
+                <div class="col-lg-6 col-md-6">
+                    <div class="latest-portfolio-card tmp-hover-link tmp-scroll-trigger tmp-fade-in animation-order-1">
+                        <div class="portfoli-card-img">
+                            <div class="img-box v2">
+                                <a title="projectdetail" href="@Url.Action("ProjectDetail", "Home", new {
+                                newTitle = Url.FriendlyURLTitle(item.ProjectTitle),
+                                id = item.ID
+                            })">
+                                    <img class="img-primary hidden-on-mobile" src="@item.ProjectImg" style="width:100%;" alt="@item.ProjectTitle" />
+
+                                    <img class="img-secondary" src="@item.ProjectImg" style="width:100%;" alt="@item.ProjectTitle" />
+                                </a>
+                            </div>
+                        </div>
+                        <div class="portfolio-card-content-wrap">
+                            <div class="content-left">
+                                <h3 class="portfolio-card-title">
+                                    <a class="link" title="projectdetail" href="@Url.Action("ProjectDetail", "Home", new {
+                                    newTitle = Url.FriendlyURLTitle(item.ProjectTitle),
+                                    id = item.ID
+                                })">
+                                        @item.ProjectTitle
+                                    </a>
+                                </h3>
+                                <p class="portfoli-card-para">@item.ProjectEntryDescription</p>
+                            </div>
+                            <a title="projectdetail" href="@Url.Action("ProjectDetail", "Home", new {
+                            newTitle = Url.FriendlyURLTitle(item.ProjectTitle),
+                            id = item.ID
+                        })" class="tmp-arrow-icon-btn">
+                                <div class="btn-inner">
+                                    <i class="tmp-icon fa-solid fa-arrow-up-right"></i>
+                                    <i class="tmp-icon-bottom fa-solid fa-arrow-up-right"></i>
+                                </div>
                             </a>
-                        </h3>
-                        <a href="blog-details.html" class="read-more-btn v2">
-                            Read More <span class="read-more-icon"><i class="fa-solid fa-angle-right"></i></span>
-                        </a>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-6">
-                <div class="blog-card tmp-hover-link tmp-scroll-trigger tmp-fade-in animation-order-3">
-                    <div class="img-box">
-                        <a href="blog-details.html">
-                            <img class="img-primary hidden-on-mobile" src="/Content/images/blog/blog-img-6.jpg" alt="Blog Thumbnail">
-                            <img class="img-secondary" src="/Content/images/blog/blog-img-6.jpg" alt="BLog Thumbnail">
-                        </a>
-                        <ul class="blog-tags">
-                            <li><span class="tag-icon"><i class="fa-regular fa-user"></i></span>Mesbah</li>
-                            <li><span class="tag-icon"><i class="fa-solid fa-calendar-days"></i></span>April 10</li>
-                        </ul>
-                    </div>
-                    <div class="blog-content-wrap">
-                        <h3 class="blog-title v2"><a class="link" href="blog-details.html">Each one showcases my approach and dedication man</a></h3>
-                        <a href="blog-details.html" class="read-more-btn v2">
-                            Read More <span class="read-more-icon"><i class="fa-solid fa-angle-right"></i></span>
-                        </a>
-                    </div>
-                </div>
-            </div>
+            }
         </div>
+
+
     </div>
 </section>
 
