--- a/MyPeronalWebSite/Views/Partial/NavbarPartial.cshtml
+++ b/MyPeronalWebSite/Views/Partial/NavbarPartial.cshtml
@@ -14,30 +14,25 @@
                     <nav class="tmp-mainmenu-nav d-none d-xl-block">
                         <ul class="tmp-mainmenu">
                             <li>
-                                <a href="#">
-                                    Home
+                                <a href="@Url.Action("Index", "Home")">
+                                    Anasayfa
                                 </a>
 
                             </li>
                             <li>
-                                <a href="about.html">About</a>
+                                <a href="#about">About</a>
                             </li>
 
 
                             <li class="has-dropdown">
-                                <a href="#">
+                                <a href="#projects">
                                     Project
                                     <i class="fa-regular fa-chevron-down"></i>
                                 </a>
-                                <ul class="submenu">
-                                    <li><a href="project.html">Project</a></li>
-                                    <li><a href="project-style-two.html">Project Style 2</a></li>
-                                    <li><a href="project-style-three.html">Project Style 3</a></li>
-                                    <li><a href="project-details.html">Project Details</a></li>
-                                </ul>
+                                
                             </li>
                             <li>
-                                <a href="contact.html">Contact</a>
+                                <a href="#get-in-touch">Contact</a>
                             </li>
                         </ul>
 
